--- a/main.css
+++ b/main.css
@@ -29,3 +29,40 @@ td {
 .form-table>tr>td {
     border-color: white;
 }
+
+.status-select {
+    position: relative;
+    width: 90px;
+    height: 31px;
+    background: #FFFFFF;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+.status-select:hover {
+    border: 2px solid #c50000;
+    color: black;
+}
+
+input:hover {
+    border: 2px solid #c50000;
+    color: black;
+}
+
+button {
+    border: 2px solid #000000;
+    width: 80px;
+    height: 26px;
+    border-radius: 3px;
+    color: #000000;
+    background: white;
+    box-shadow: 0 5px 0 #000000;
+}
+
+button:hover {
+    background: white;
+    box-shadow: none;
+    position: relative;
+    top: 5px;
+    border: 2px solid #c50000;
+}
